; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_dag.c_printdag.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_dag.c_printdag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_5__* }

@stdout = common dso_local global i32* null, align 8
@stderr = common dso_local global i32* null, align 8
@forest = common dso_local global %struct.TYPE_5__* null, align 8
@.str = private unnamed_addr constant [23 x i8] c"node'%d printed above\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @printdag(%struct.TYPE_5__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp eq i32 %6, 1
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = load i32*, i32** @stdout, align 8
  br label %12

10:                                               ; preds = %2
  %11 = load i32*, i32** @stderr, align 8
  br label %12

12:                                               ; preds = %10, %8
  %13 = phi i32* [ %9, %8 ], [ %11, %10 ]
  store i32* %13, i32** %5, align 8
  %14 = call i64* @printed(i32 0)
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %16 = icmp eq %struct.TYPE_5__* %15, null
  br i1 %16, label %17, label %34

17:                                               ; preds = %12
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** @forest, align 8
  store %struct.TYPE_5__* %18, %struct.TYPE_5__** %3, align 8
  %19 = icmp ne %struct.TYPE_5__* %18, null
  br i1 %19, label %20, label %33

20:                                               ; preds = %17
  br label %21

21:                                               ; preds = %28, %20
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %23, align 8
  store %struct.TYPE_5__* %24, %struct.TYPE_5__** %3, align 8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @printdag1(%struct.TYPE_5__* %25, i32 %26, i32 0)
  br label %28

28:                                               ; preds = %21
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** @forest, align 8
  %31 = icmp ne %struct.TYPE_5__* %29, %30
  br i1 %31, label %21, label %32

32:                                               ; preds = %28
  br label %33

33:                                               ; preds = %32, %17
  br label %52

34:                                               ; preds = %12
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %36 = ptrtoint %struct.TYPE_5__* %35 to i32
  %37 = call i32 @nodeid(i32 %36)
  %38 = call i64* @printed(i32 %37)
  %39 = load i64, i64* %38, align 8
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %47

41:                                               ; preds = %34
  %42 = load i32*, i32** %5, align 8
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %44 = ptrtoint %struct.TYPE_5__* %43 to i32
  %45 = call i32 @nodeid(i32 %44)
  %46 = call i32 @fprint(i32* %42, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %45)
  br label %51

47:                                               ; preds = %34
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %49 = load i32, i32* %4, align 4
  %50 = call i32 @printdag1(%struct.TYPE_5__* %48, i32 %49, i32 0)
  br label %51

51:                                               ; preds = %47, %41
  br label %52

52:                                               ; preds = %51, %33
  ret void
}

declare dso_local i64* @printed(i32) #1

declare dso_local i32 @printdag1(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @nodeid(i32) #1

declare dso_local i32 @fprint(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
